# MHWildsHighQualityPhoto

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/AlbumPhoto/: modinfo.ini
assets/QuestResult/: modinfo.ini
assets/QuestResult/HQQuestResultBackground_HDCapturePack/: README.md  modinfo.ini
assets/QuestResult/HQQuestResultBackground_HDCapturePack/natives/STM/RenderTexture/16x9/: Quest_Background_16x9_1080p.rtex.6  Quest_Background_16x9_2K.rtex.6  Quest_Background_16x9_4K.rtex.6
assets/QuestResult/HQQuestResultBackground_HDCapturePack/natives/STM/RenderTexture/21x9/: Quest_Background_21x9_1080p.rtex.6  Quest_Background_21x9_3440x1440.rtex.6  Quest_Background_21x9_4K.rtex.6
assets/QuestResult/HQQuestResultBackground_HDCapturePack_Enabler/: modinfo.ini
assets/QuestResult/HQQuestResultBackground_HDR_Addon/: modinfo.ini
source/: CMakeLists.txt
source/reframework/: CImGuiRouteFix.cpp  CMakeLists.txt  CaptureResolutionInject.cpp  CaptureResolutionInject.hpp  GameUIController.cpp  GameUIController.hpp  MHWildsTypes.h  ModSettings.cpp  ModSettings.hpp  Plugin.cpp  Plugin.hpp  PluginBase.cpp  PluginBase.hpp  Plugin_AlbumPhoto.cpp  Plugin_AlbumPhoto.hpp  Plugin_QuestResult.cpp  Plugin_QuestResult.hpp  QuestResultHQBackgroundMode.hpp  REFrameworkBorrowedAPI.cpp  REFrameworkBorrowedAPI.hpp  WebPCaptureInjectClient.hpp  WebPCaptureInjector.cpp  WebPCaptureInjector.hpp
source/reframework/Archive/: Plugin_Prototype.cpp
source/reframework/InjectClient/: FileInjectClient.cpp  FileInjectClient.hpp  NullInjectClient.hpp  ReShadeAddOnInjectClient.cpp  ReShadeAddOnInjectClient.hpp
source/reshade/: CMakeLists.txt  Plugin.cpp  Plugin.h
